# nslogger_client

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: rust.yml
src/: lib.rs
src/nslogger/: config.rs  log_message.rs  log_worker.rs  logger_state.rs  message_handler.rs  message_worker.rs  mod.rs  network_manager.rs  reference_counted_runtime.rs
tests/: lib.rs
