[package]
name = "nslogger_client"
version = "0.2.0"
authors = ["Guillaume Godet-Bar <guillaume.godetbar@gmail.com>"]
edition = "2024"

[lib]
name="nslogger"
crate-type = ["lib"]
path = "src/lib.rs"

[dependencies]
async-dnssd = "0.5"
byteorder = "1.0"
cfg-if = "1.0"
chrono = "0.4"
futures = "0.3"
log = { version = "0.4", features = [ "std" ] }
mio  = "0.6"
openssl = "0.10"
sys-info = "0.9"
thiserror = "2.0"
tokio = { version = "1.4", features = [ "macros", "rt", "rt-multi-thread", "time" ] }

[dev-dependencies]
env_logger = "*"
serial_test = "3.1"
tempfile = "3.20"
