[package]
name = "nslogger_client"
version = "0.3.0"
authors = ["Guillaume Godet-Bar <guillaume.godetbar@gmail.com>"]
edition = "2024"

[lib]
name="nslogger"
crate-type = ["lib"]
path = "src/lib.rs"

[features]
# Enables testing the integration of the library with the desktop application.
desktop-integration = []

[dependencies]
async-dnssd = "0.5"
cfg-if = "1.0"
chrono = "0.4"
futures = "0.3"
log = { version = "0.4", features = [ "std" ] }
rustls = "0.23"
sys-info = "0.9"
thiserror = "2.0"
tokio = { version = "1.52", features = [ "fs", "io-util", "macros", "rt", "rt-multi-thread", "time" ] }
tokio-rustls = "0.26.4"
webpki-roots = "1.0"

[dev-dependencies]
env_logger = "0.11"
serial_test = "3.1"
tempfile = "3.20"
